feat: updated blog files for further inspection

--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <script src="./scripts/blog.js"></script>
 <head>
     <title>Blog</title>
@@ -19,7 +20,7 @@
             <h1 class="page-title">
                 Blog
             </h1>
-            <div id="container">
+            <div id="blogpost-container">
 
             </div>
         </main>
@@ -27,3 +28,4 @@
                 © 2023 <Personal Website Name> | All Rights Reserved
             </footer>
     </body>
+</html>
