feat: update blog files to be linked correctly

--- a/blogIntro.html
+++ b/blogIntro.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <head>
     <title>Welcome to my Blogs</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <nav class="navbar">
+        <h1 class="logo"><a href="index.html">Xavier's Personal Website</a></h1>
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>   
     <main>
         <h2 class="blog-title">
             Welcome to my Blog!
         </h2>
-        <h6>
+        <h4>
             Thursday, October 18, 2023
-        </h6>
+        </h4>
         <p>
             Dear reader, as you may know, my name is Xavier Garcia. This is my first blogpost on my personal website 
             that I have been curating for <em>Hack4Impact,</em> and I will use this post as an introduction to 
