--- a/firstBlog.html
+++ b/firstBlog.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <head>
     <title>My First Blog</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <nav class="navbar">
+        <h1 class="logo"><a href="index.html">Xavier's Personal Website</a></h1>
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>   
     <main>
         <h2 class="blog-title">
             My First Blog
         </h2>
-        <h6>
+        <h4>
             Thursday, October 18, 2023
-        </h6>
+        </h4>
         <p>
             Week 4 of my third year at Cal Poly is coming to an end, but I still have classes tomorrow. I am excited to
             attend my first Hack4Impact bootcamp session in about an hour and a half. I want to learn more Languages
