feat: clean up blog pages and format CSS for blogs

--- a/blogIntro.html
+++ b/blogIntro.html
@@ -15,18 +15,20 @@
         </ul>
     </nav>   
     <main>
-        <h2 class="blog-title">
-            Welcome to my Blog!
-        </h2>
-        <h4>
-            Thursday, October 18, 2023
-        </h4>
-        <p>
-            Dear reader, as you may know, my name is Xavier Garcia. This is my first blogpost on my personal website 
-            that I have been curating for <em>Hack4Impact,</em> and I will use this post as an introduction to 
-            this Blog page. I am beginning Bootcamp for new Hack4Impact members, and as part of the program, I have learned
-            how to dynamically update my website by appending to the DOM using TypeScript. Expect to see more posts from 
-            me in the future!
-        </p>
+        <div class="blogpost">
+            <h2 class="blog-title">
+                Welcome to my Blog!
+            </h2>
+            <h4 class="blog-subtitle">
+                Thursday, October 18, 2023
+            </h4>
+            <p class="blog-description">
+                Dear reader, as you may know, my name is Xavier Garcia. This is my first blogpost on my personal website 
+                that I have been curating for <em>Hack4Impact,</em> and I will use this post as an introduction to 
+                this Blog page. I am beginning Bootcamp for new Hack4Impact members, and as part of the program, I have learned
+                how to dynamically update my website by appending to the DOM using TypeScript. Expect to see more posts from 
+                me in the future!
+            </p>
+        </div>
     </main>
 </body>
