--- a/firstBlog.html
+++ b/firstBlog.html
@@ -15,17 +15,19 @@
         </ul>
     </nav>   
     <main>
-        <h2 class="blog-title">
-            My First Blog
-        </h2>
-        <h4>
-            Thursday, October 18, 2023
-        </h4>
-        <p>
-            Week 4 of my third year at Cal Poly is coming to an end, but I still have classes tomorrow. I am excited to
-            attend my first Hack4Impact bootcamp session in about an hour and a half. I want to learn more Languages
-            and programming practices through this bootcamp, and I am eager to get to work on helping non-profits. I am 
-            looking forward to attending Culturefest Saturday, and I can't wait to get some much needed rest this weekend.
-        </p>
+        <div class="blogpost">
+            <h2 class="blog-title">
+                My First Blog
+            </h2>
+            <h4 class="blog-subtitle">
+                Thursday, October 18, 2023
+            </h4>
+            <p class="blog-description">
+                Week 4 of my third year at Cal Poly is coming to an end, but I still have classes tomorrow. I am excited to
+                attend my first Hack4Impact bootcamp session in about an hour and a half. I want to learn more Languages
+                and programming practices through this bootcamp, and I am eager to get to work on helping non-profits. I am 
+                looking forward to attending Culturefest Saturday, and I can't wait to get some much needed rest this weekend.
+            </p>
+        </div>
     </main>
 </body>
