feat: update font sizes throughout website w/ CSS

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
         </nav>
         <main>
             <h1 class="page-title">Resume</h1>
-            <a href="resume.pdf" download>Download Resume</a>
+            <a class="resume-download" href="resume.pdf" download>Download Resume</a>
             <br>
             <div class="resume">
                 <h2 class="logo">Xavier Garcia</h2>
